DE2396 - Fixes shared wrap zones not de/selecting together

--- a/applications/cpq-maps/src/app/cpq-map/components/grid/grid.component.css
+++ b/applications/cpq-maps/src/app/cpq-map/components/grid/grid.component.css
@@ -9,3 +9,48 @@
 .val-text-center {
   text-align: center;
 }
+
+.grid-header-row {
+
+}
+
+.grid-data-row > td {
+  border-style: solid;
+  border-color: #c8c8c8;
+  border-spacing: 2px;
+  border-width: 1px;
+  text-align: center
+}
+
+.checkbox-column {
+  width: 30px;
+  padding: 0 !important;
+  text-align: center;
+}
+
+.small-geocode {
+  width: 3.5em;
+}
+
+.large-geocode {
+  width: 5.5em;
+}
+
+.small-distributionQuantity, .large-distributionQuantity,
+.small-investment,
+.large-distance, .large-ownerGroup {
+  width: 5em;
+}
+
+.small-wrapZone, .large-wrapZone {
+  width: 10em;
+}
+
+.large-siteName {
+  width: 9em;
+}
+
+.large-investment,
+.large-var1Value, .large-var2Value, .large-var3Value {
+  width: 6em;
+}
